syntax = "proto3";
package OAuth2;

service OAuth2 {
    
}